--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,18 @@
 {
-  "require-dev": {
-    "phpunit/phpunit": "4.0.*"
-  }
+    "name": "apruve/apruve-php",
+    "description": "Apruve PHP Library to support apruve.js.",
+    "require-dev": {
+        "phpunit/phpunit": "4.0.*"
+    },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Apruve",
+            "email": "support@apruve.com"
+        }
+    ],
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.3.0"
+    }
 }
