--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "apruve/apruve-php",
     "description": "Apruve PHP Library to support apruve.js.",
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "4.1.0"
     },
     "license": "MIT",
     "authors": [
