--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "apruve/apruve-php",
   "description": "Apruve PHP Library to support apruve.js.",
   "require-dev": {
-    "phpunit/phpunit": "4.1.0"
+    "phpunit/phpunit": "^5"
   },
   "license": "MIT",
   "authors": [
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=5.6.0"
   },
   "autoload": {
     "psr-0": {
